--- a/index.html
+++ b/index.html
@@ -2,55 +2,115 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>viswa amit</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <title>TCL Carrom League Leaderboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+        }
+
+        .logo {
+            width: 100px;
+            height: auto;
+        }
+
+        h1 {
+            margin: 10px 0;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #333;
+            color: white;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png">
-    <h1>I'm Viswa Amit.</h1>
-    <p class="profession"><strong>a <span><u>pro</u></span>grammer. </strong></p>
-    <img class="bottom-cloud" src="images/cloud.png">
-    <img src="images/mountain.png">
-    </div>
-    <div class="middle-container">
-        <div class="profile">
-          <img class="profile-img" src="images/viswa amit profile picture-modified.png" alt="viswa-amit's-profile-picture">
-          <h2>Hello.</h2>
-          <p>I'm Tattaputikala Viswa Amit a self-motivated student, I ❤️ programming and a web designer and developer always ready to transduce imagination to life.</p>
-        </div>
-        <hr>
-        <div class="skills">
-          <h2>My Skills.</h2>
-          <div class="skill-row1">
-            <img class="skill-img1" src="images/skill1.webp" alt="programming-image">
-            <h3>PYTHON, C/C++</h3>
-            <p class="skill-desc1">Being a programmer, developed problem solving skills and chosen python ,c/c++ languages for developement projects.</p>
-          </div>
-          <div class="skill-row2">
-            <img class="skill-img2" src="images/skill2.png" alt="webdevelopment-image">
-            <h3>FULLSTACK WEB DEVELOPMENT</h3>
-            <p class="skill-desc2">Apart from programming my love towards technology never stopped me to explore web technologies and worked on HTML CSS and JAVASCRIPT as frontend beside MERN STACK as backend.</p>
-          </div>
-        <hr>
-        <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3>ALWAYS READY FOR FREELANCING.</h3>
-          <p class="contactme-msg">Have an exciting project where you need some help? send me over a message, and let's chat..</p>
-          <a class="btn" href="mailto:viswaamittattaputikala@gmail.com">CONTACT ME</a>
-        </div>
-    </div>
-      
-      
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/viswa-amit-tattaputikala/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="">Website</a>
-      <p class="copyrgt">© 2022 Tattaputikala Viswa Amit.</p>
-    </div>
+    <header>
+        <img src="https://via.placeholder.com/100x100.png?text=TCL+Logo" alt="TCL Logo" class="logo">
+        <h1>TCL Carrom League Leaderboard</h1>
+    </header>
+
+    <main>
+        <table id="leaderboard">
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Player Name</th>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Points</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Amit Viswa</td>
+                    <td>15</td>
+                    <td>3</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Raj Patel</td>
+                    <td>12</td>
+                    <td>6</td>
+                    <td>36</td>
+                </tr>
+                <!-- Add more players here -->
+            </tbody>
+        </table>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TCL Carrom League</p>
+    </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log("TCL Carrom League Leaderboard Loaded");
+            // You can add additional functionality here
+        });
+    </script>
 </body>
 </html>
