--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/100x100.png?text=TCL+Logo" alt="TCL Logo" class="logo">
+        <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
         <h1>TCL Carrom League Leaderboard</h1>
     </header>
 
