--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <header>
         <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
-        <h1>TCL Carrom League Leaderboard</h1>
+        <h1>TCL Carrom League Leaderboard (website under maintenance - Live analytics visible once game starts)</h1>
     </header>
 
     <main>
@@ -76,7 +76,7 @@
             <thead>
                 <tr>
                     <th>Rank</th>
-                    <th>Player Name</th>
+                    <th>Team Name</th>
                     <th>Wins</th>
                     <th>Losses</th>
                     <th>Points</th>
@@ -85,17 +85,17 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Amit Viswa</td>
-                    <td>15</td>
-                    <td>3</td>
-                    <td>45</td>
+                    <td>Team 1</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Raj Patel</td>
-                    <td>12</td>
-                    <td>6</td>
-                    <td>36</td>
+                    <td>Team 2</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
                 </tr>
                 <!-- Add more players here -->
             </tbody>
