--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
         </table>
     </main>
 
-    <footer>
+       <footer>
         <p>&copy; 2024 TCL Carrom League</p>
-    </footer>
+        <div class="dev-contact">
+            <p>Developer Contact: <a href="https://www.linkedin.com/in/viswa-amit" target="_blank">@viswa amit</a></p>
+        </div>
+        </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
