--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 <body>
     <header>
         <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
-        <h1>TCL Carrom League Leaderboard (website under maintenance - Live analytics visible once game starts)</h1>
+        <h1>TCL Carrom League Leaderboard</h1>
+        <h3>(website under maintenance - Live analytics visible once game starts)</h3>
     </header>
 
     <main>
