--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
        <footer>
         <p>&copy; 2024 TCL Carrom League</p>
         <div class="dev-contact">
-            <p>Developer Contact: <a href="https://www.linkedin.com/in/viswa-amit" target="_blank">@viswa amit</a></p>
+            <p>Developer Contact: <a href="https://www.linkedin.com/in/viswa-amit" target="_blank">🐞🐞🐞@viswa amit🤝🤝🤝</a></p>
         </div>
         </footer>
 
