--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         document.addEventListener('DOMContentLoaded', fetchData);
 
         function fetchData() {
-            const url = 'https://tapplent403-my.sharepoint.com/:x:/g/personal/viswa_amit_tapplent_com/Eb9FYMFz4dlCgx7a9rkKgfEBEZXlKP4bs3360zKW1JUEog?e=bnZGNp'; // Replace with your Excel file URL
+            const url = 'https://tapplent403-my.sharepoint.com/:x:/g/personal/viswa_amit_tapplent_com/Eb9FYMFz4dlCgx7a9rkKgfEBEZXlKP4bs3360zKW1JUEog'; // Replace with your Excel file URL
 
             fetch(url, {
                 headers: {
