--- a/index.html
+++ b/index.html
@@ -90,24 +90,20 @@
         document.addEventListener('DOMContentLoaded', fetchData);
 
         function fetchData() {
-    const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-    const url = 'https://tapplent403-my.sharepoint.com/:x:/g/personal/viswa_amit_tapplent_com/Eb9FYMFz4dlCgx7a9rkKgfEBEZXlKP4bs3360zKW1JUEog'; // Replace with your Excel file URL
+            const corsProxy = 'https://api.allorigins.win/get?url=';
+            const excelUrl = encodeURIComponent('YOUR_EXCEL_FILE_URL_HERE'); // Replace with your Excel file URL
+            const url = corsProxy + excelUrl;
 
-    fetch(proxyUrl + url, {
-        headers: {
-            'Cache-Control': 'no-cache'
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    const workbook = XLSX.read(data.contents, { type: 'array' });
+                    const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
+                    const jsonData = XLSX.utils.sheet_to_json(firstSheet);
+                    updateLeaderboard(jsonData);
+                })
+                .catch(error => console.error('Error fetching data:', error));
         }
-    })
-    .then(response => response.arrayBuffer())
-    .then(data => {
-        const workbook = XLSX.read(data, { type: 'array' });
-        const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-        const jsonData = XLSX.utils.sheet_to_json(firstSheet);
-        updateLeaderboard(jsonData);
-    })
-    .catch(error => console.error('Error fetching data:', error));
-}
-
 
         function updateLeaderboard(data) {
             const tableBody = document.querySelector('#leaderboard tbody');
