--- a/index.html
+++ b/index.html
@@ -90,17 +90,26 @@
         document.addEventListener('DOMContentLoaded', fetchData);
 
         function fetchData() {
-            const corsProxy = 'https://api.allorigins.win/get?url=';
-            const excelUrl = encodeURIComponent('YOUR_EXCEL_FILE_URL_HERE'); // Replace with your Excel file URL
+            const corsProxy = 'https://cors-anywhere.herokuapp.com/';
+            const excelUrl = 'https://YOUR_EXCEL_FILE_URL_HERE'; // Replace with your Excel file URL
             const url = corsProxy + excelUrl;
 
             fetch(url)
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.arrayBuffer();
+                })
                 .then(data => {
-                    const workbook = XLSX.read(data.contents, { type: 'array' });
-                    const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-                    const jsonData = XLSX.utils.sheet_to_json(firstSheet);
-                    updateLeaderboard(jsonData);
+                    try {
+                        const workbook = XLSX.read(data, { type: 'array' });
+                        const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
+                        const jsonData = XLSX.utils.sheet_to_json(firstSheet);
+                        updateLeaderboard(jsonData);
+                    } catch (error) {
+                        console.error('Error processing Excel data:', error);
+                    }
                 })
                 .catch(error => console.error('Error fetching data:', error));
         }
