--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         function fetchData() {
             const corsProxy = 'https://cors-anywhere.herokuapp.com/';
-            const excelUrl = 'https://YOUR_EXCEL_FILE_URL_HERE'; // Replace with your Excel file URL
+            const excelUrl = 'https://tapplent403-my.sharepoint.com/:x:/g/personal/viswa_amit_tapplent_com/Eb9FYMFz4dlCgx7a9rkKgfEBEZXlKP4bs3360zKW1JUEog'; // Replace with your Excel file URL
             const url = corsProxy + excelUrl;
 
             fetch(url)
