--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
                     }
-                    return response.arrayBuffer();
+                    return response.blob();
                 })
                 .then(data => {
                     try {
-                        const workbook = XLSX.read(data, { type: 'array' });
+                        const workbook = XLSX.read(data, { type: 'blob' });
                         const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
                         const jsonData = XLSX.utils.sheet_to_json(firstSheet);
                         updateLeaderboard(jsonData);
