--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #fff4e6; /* Light orange background */
             color: #333;
             text-align: center;
+            background-image: url('images/carrom-background.png'); /* Background image */
+            background-size: cover;
+            background-attachment: fixed;
         }
         header {
-            background-color: #333;
+            background-color: #ff6f00; /* Bright orange */
             color: white;
             padding: 20px;
+            background-image: url('images/carrom-board-header.png'); /* Header background image */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            position: relative;
         }
         .logo {
             width: 100px;
@@ -24,6 +32,25 @@
         }
         h1 {
             margin: 10px 0;
+            font-size: 2em;
+            color: #fff;
+        }
+        .pdf-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #ffeb3b; /* Light yellow */
+            color: #333;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px; /* Rounded corners */
+            cursor: pointer;
+            font-size: 1em;
+            box-shadow: 0 0 8px rgba(0,0,0,0.2); /* Shadow for depth */
+            transition: background-color 0.3s ease; /* Smooth transition */
+        }
+        .pdf-button:hover {
+            background-color: #fbc02d; /* Darker yellow on hover */
         }
         main {
             padding: 20px;
@@ -40,14 +67,14 @@
             border: 1px solid #ddd;
         }
         th {
-            background-color: #333;
+            background-color: #ff6f00; /* Bright orange */
             color: white;
         }
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
         footer {
-            background-color: #333;
+            background-color: #ff6f00; /* Bright orange */
             color: white;
             padding: 10px;
             position: fixed;
@@ -58,6 +85,10 @@
             margin-top: 20px;
             position: relative;
             padding-top: 56.25%; /* 16:9 aspect ratio */
+            background-color: #fff; /* White background for video container */
+            border: 4px solid #ff6f00; /* Orange border */
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
         }
         .video-container iframe {
             position: absolute;
@@ -65,13 +96,44 @@
             left: 0;
             width: 100%;
             height: 100%;
+            border: none;
+            border-radius: 8px; /* Rounded corners */
+        }
+        #video-search {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #ffeb3b; /* Light yellow */
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Shadow for depth */
+            display: inline-block;
+        }
+        #video-search input {
+            padding: 10px;
+            border: 1px solid #ff6f00; /* Orange border */
+            border-radius: 4px; /* Rounded corners */
+            width: 300px;
+            font-size: 1em;
+        }
+        #video-search button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px; /* Rounded corners */
+            background-color: #ff6f00; /* Orange */
+            color: white;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease; /* Smooth transition */
+        }
+        #video-search button:hover {
+            background-color: #e65100; /* Darker orange on hover */
         }
     </style>
 </head>
 <body>
     <header>
         <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
-        <h1>TCL - Taplent Carrom League Leaderboard</h1>
+        <h1>TCL - Tapplent Carrom League Leaderboard</h1>
+        <a href="path/to/rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
     </header>
     <main>
         <div id="leaderboard-container">
@@ -79,12 +141,12 @@
         </div>
 
         <div id="video-search">
-            <input type="text" id="video-id" placeholder="Enter YouTube video ID or URL">
+            <input type="text" id="video-id" placeholder="Enter YouTube video ID or Google Drive file ID">
             <button onclick="playVideo()">Play Video</button>
         </div>
 
         <div class="video-container" id="video-container">
-            <!-- YouTube video will be embedded here -->
+            <!-- Video will be embedded here -->
         </div>
     </main>
     <footer>
@@ -128,15 +190,26 @@
 
         function playVideo() {
             const videoId = document.getElementById('video-id').value.trim();
-            const videoUrl = videoId.includes('https://') ? videoId.split('v=')[1] : videoId;
+            let videoUrl;
+
+            if (videoId.includes('drive.google.com')) {
+                // For Google Drive videos
+                const fileId = videoId.split('/d/')[1]?.split('/')[0];
+                videoUrl = `https://drive.google.com/file/d/${fileId}/preview`;
+            } else {
+                // For YouTube videos
+                videoUrl = videoId.includes('https://') ? videoId.split('v=')[1] : videoId;
+                videoUrl = `https://www.youtube.com/embed/${videoUrl}`;
+            }
+
             const videoContainer = document.getElementById('video-container');
 
             if (videoUrl) {
                 videoContainer.innerHTML = `
-                    <iframe src="https://www.youtube.com/embed/${videoUrl}" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="${videoUrl}" frameborder="0" allowfullscreen></iframe>
                 `;
             } else {
-                videoContainer.innerHTML = '<p>Please enter a valid YouTube video ID or URL.</p>';
+                videoContainer.innerHTML = '<p>Please enter a valid YouTube video ID, URL, or Google Drive file ID.</p>';
             }
         }
     </script>
