--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fff4e6; /* Light orange background */
+            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Orange to yellow gradient */
             color: #333;
             text-align: center;
-            background-image: url('images/carrom-background.png'); /* Background image */
+            background-image: url('https://www.publicdomainpictures.net/pictures/30000/velka/carrom-board.jpg'); /* Background image */
             background-size: cover;
             background-attachment: fixed;
         }
         header {
-            background-color: #ff6f00; /* Bright orange */
+            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
             color: white;
             padding: 20px;
-            background-image: url('images/carrom-board-header.png'); /* Header background image */
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Carrom_board_1.jpg/1200px-Carrom_board_1.jpg'); /* Header background image */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -29,6 +29,11 @@
         .logo {
             width: 100px;
             height: auto;
+            animation: rotate 10s linear infinite; /* Logo rotation animation */
+        }
+        @keyframes rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
         }
         h1 {
             margin: 10px 0;
@@ -39,7 +44,7 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            background-color: #ffeb3b; /* Light yellow */
+            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Yellow to orange gradient */
             color: #333;
             border: none;
             padding: 10px 20px;
@@ -47,13 +52,14 @@
             cursor: pointer;
             font-size: 1em;
             box-shadow: 0 0 8px rgba(0,0,0,0.2); /* Shadow for depth */
-            transition: background-color 0.3s ease; /* Smooth transition */
+            transition: background 0.3s ease; /* Smooth transition */
         }
         .pdf-button:hover {
-            background-color: #fbc02d; /* Darker yellow on hover */
+            background: linear-gradient(to right, #fbc02d, #e65100); /* Darker gradient on hover */
         }
         main {
             padding: 20px;
+            position: relative;
         }
         table {
             width: 80%;
@@ -67,14 +73,14 @@
             border: 1px solid #ddd;
         }
         th {
-            background-color: #ff6f00; /* Bright orange */
+            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
             color: white;
         }
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
         footer {
-            background-color: #ff6f00; /* Bright orange */
+            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
             color: white;
             padding: 10px;
             position: fixed;
@@ -89,6 +95,7 @@
             border: 4px solid #ff6f00; /* Orange border */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
+            overflow: hidden; /* Hide overflow */
         }
         .video-container iframe {
             position: absolute;
@@ -102,10 +109,11 @@
         #video-search {
             margin-top: 20px;
             padding: 10px;
-            background-color: #ffeb3b; /* Light yellow */
+            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Yellow to orange gradient */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Shadow for depth */
             display: inline-block;
+            position: relative;
         }
         #video-search input {
             padding: 10px;
@@ -118,20 +126,40 @@
             padding: 10px 20px;
             border: none;
             border-radius: 4px; /* Rounded corners */
-            background-color: #ff6f00; /* Orange */
+            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
             color: white;
             font-size: 1em;
             cursor: pointer;
-            transition: background-color 0.3s ease; /* Smooth transition */
+            transition: background 0.3s ease; /* Smooth transition */
         }
         #video-search button:hover {
-            background-color: #e65100; /* Darker orange on hover */
+            background: linear-gradient(to right, #e65100, #fbc02d); /* Darker gradient on hover */
+        }
+        .carrom-images {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .carrom-image {
+            width: 200px;
+            height: auto;
+            margin: 10px;
+            animation: bounce 2s infinite; /* Bounce animation */
+        }
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Carrom_board_1.jpg/1200px-Carrom_board_1.jpg" alt="TCL Logo" class="logo">
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="path/to/rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
     </header>
@@ -147,6 +175,12 @@
 
         <div class="video-container" id="video-container">
             <!-- Video will be embedded here -->
+        </div>
+
+        <!-- Carrom-themed images -->
+        <div class="carrom-images">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Carrom_pieces.jpg" alt="Carrom Pieces" class="carrom-image">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Carrom_board_pieces.jpg" alt="Carrom Board" class="carrom-image">
         </div>
     </main>
     <footer>
@@ -171,10 +205,10 @@
                 })
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split(','));
-                    let html = '<table id="leaderboard"><thead><tr><th>Rank</th><th>Team Name</th><th>Wins</th><th>Losses</th><th>Points</th></tr></thead><tbody>';
+                    let html = '<table id="leaderboard"><thead><tr><th>Rank</th><th>Team Name</th><th>Wins</th><th>Losses</th><th>Points</th><th>Remarks</th></tr></thead><tbody>';
 
                     rows.slice(1).forEach((row, index) => {
-                        html += `<tr><td>${index + 1}</td><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td><td>${row[3]}</td></tr>`;
+                        html += `<tr><td>${index + 1}</td><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td><td>${row[3]}</td><td>${row[4]}</td></tr>`;
                     });
 
                     html += '</tbody></table>';
@@ -192,24 +226,16 @@
             const videoId = document.getElementById('video-id').value.trim();
             let videoUrl;
 
-            if (videoId.includes('drive.google.com')) {
-                // For Google Drive videos
-                const fileId = videoId.split('/d/')[1]?.split('/')[0];
-                videoUrl = `https://drive.google.com/file/d/${fileId}/preview`;
-            } else {
-                // For YouTube videos
-                videoUrl = videoId.includes('https://') ? videoId.split('v=')[1] : videoId;
-                videoUrl = `https://www.youtube.com/embed/${videoUrl}`;
-            }
+            if (videoId) {
+                if (videoId.startsWith('https://drive.google.com')) {
+                    videoUrl = `https://drive.google.com/file/d/${videoId.split('/')[5]}/preview`;
+                } else {
+                    videoUrl = `https://www.youtube.com/embed/${videoId}`;
+                }
 
-            const videoContainer = document.getElementById('video-container');
-
-            if (videoUrl) {
-                videoContainer.innerHTML = `
-                    <iframe src="${videoUrl}" frameborder="0" allowfullscreen></iframe>
-                `;
+                document.getElementById('video-container').innerHTML = `<iframe src="${videoUrl}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
             } else {
-                videoContainer.innerHTML = '<p>Please enter a valid YouTube video ID, URL, or Google Drive file ID.</p>';
+                alert('Please enter a valid video ID');
             }
         }
     </script>
