--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Orange to yellow gradient */
             color: #333;
             text-align: center;
-            background-image: url('https://www.publicdomainpictures.net/pictures/30000/velka/carrom-board.jpg'); /* Background image */
+            background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20240519/pngtree-carrom-board-and-black-image_15797790.jpg'); /* Background image */
             background-size: cover;
             background-attachment: fixed;
         }
@@ -20,7 +20,7 @@
             background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
             color: white;
             padding: 20px;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Carrom_board_1.jpg/1200px-Carrom_board_1.jpg'); /* Header background image */
+            background-image: url('https://media.istockphoto.com/id/148350361/photo/carrom-board.jpg?s=612x612&w=0&k=20&c=gN8J3o-ilCC8ghORUYDqydFfAKpcCd8GUNIN5ys6JHw='); /* Header background image */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -159,7 +159,7 @@
 </head>
 <body>
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Carrom_board_1.jpg/1200px-Carrom_board_1.jpg" alt="TCL Logo" class="logo">
+        <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="path/to/rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
     </header>
