--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Orange to yellow gradient */
+            background: #ffb74d; /* Warm orange background color */
             color: #333;
             text-align: center;
         }
         header {
-            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
+            background: #ff9800; /* Bright orange background color */
             color: white;
             padding: 20px;
             position: relative;
@@ -32,7 +32,7 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Yellow to orange gradient */
+            background: #ffeb3b; /* Yellow background for button */
             color: #333;
             border: none;
             padding: 10px 20px;
@@ -43,7 +43,7 @@
             transition: background 0.3s ease; /* Smooth transition */
         }
         .pdf-button:hover {
-            background: linear-gradient(to right, #fbc02d, #e65100); /* Darker gradient on hover */
+            background: #fbc02d; /* Darker yellow on hover */
         }
         main {
             padding: 20px;
@@ -62,14 +62,14 @@
             border: 1px solid #ddd;
         }
         th {
-            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
+            background: #ff9800; /* Bright orange for table headers */
             color: white;
         }
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
         footer {
-            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
+            background: #ff9800; /* Bright orange for footer */
             color: white;
             padding: 10px;
             position: fixed;
@@ -81,7 +81,7 @@
             position: relative;
             padding-top: 56.25%; /* 16:9 aspect ratio */
             background-color: #fff; /* White background for video container */
-            border: 4px solid #ff6f00; /* Orange border */
+            border: 4px solid #ff9800; /* Bright orange border */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
             overflow: hidden; /* Hide overflow */
@@ -98,7 +98,7 @@
         #video-search {
             margin-top: 20px;
             padding: 10px;
-            background: linear-gradient(to right, #ffeb3b, #ff6f00); /* Yellow to orange gradient */
+            background: #ffb74d; /* Warm orange background for search bar */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Shadow for depth */
             display: inline-block;
@@ -106,7 +106,7 @@
         }
         #video-search input {
             padding: 10px;
-            border: 1px solid #ff6f00; /* Orange border */
+            border: 1px solid #ff9800; /* Bright orange border */
             border-radius: 4px; /* Rounded corners */
             width: calc(100% - 130px); /* Responsive width */
             font-size: 1em;
@@ -115,7 +115,7 @@
             padding: 10px 20px;
             border: none;
             border-radius: 4px; /* Rounded corners */
-            background: linear-gradient(to right, #ff6f00, #ffeb3b); /* Orange to yellow gradient */
+            background: #ff9800; /* Bright orange background for button */
             color: white;
             font-size: 1em;
             cursor: pointer;
@@ -123,7 +123,7 @@
             width: 120px; /* Fixed width */
         }
         #video-search button:hover {
-            background: linear-gradient(to right, #e65100, #fbc02d); /* Darker gradient on hover */
+            background: #e65100; /* Darker orange on hover */
         }
         @media (max-width: 768px) {
             .logo {
