--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #ffeb3b, #fdd835); /* Light yellow to a deeper yellow gradient */
+            background: linear-gradient(to right, #ffeb3b, #fdd835); /* Light yellow to deeper yellow gradient */
             color: #333;
             text-align: center;
         }
         header {
-            background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to a darker orange gradient */
+            background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient */
             color: white;
             padding: 20px;
             position: relative;
@@ -98,7 +98,7 @@
         #video-search {
             margin-top: 20px;
             padding: 10px;
-            background: linear-gradient(to right, #ffeb3b, #fdd835); /* Light yellow to deeper yellow gradient */
+            background: linear-gradient(to right, #ffcc80, #ffb74d); /* Light orange to medium orange gradient */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Shadow for depth */
             display: inline-block;
