--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <header>
         <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
-        <a href="path/to/rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
+        <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
     </header>
     <main>
         <div id="leaderboard-container">
@@ -196,7 +196,7 @@
                 })
                 .then(data => {
                     const rows = data.split('\n').map(row => row.split(','));
-                    let html = '<table id="leaderboard"><thead><tr><th>Rank</th><th>Team Name</th><th>Wins</th><th>Losses</th><th>Points</th><th>Remarks</th></tr></thead><tbody>';
+                    let html = '<table id="leaderboard"><thead><tr><th>Match No</th><th>Team Name</th><th>Wins</th><th>Losses</th><th>Points</th><th>Remarks</th></tr></thead><tbody>';
 
                     rows.slice(1).forEach((row, index) => {
                         html += `<tr><td>${index + 1}</td><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td><td>${row[3]}</td><td>${row[4]}</td></tr>`;
