--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             margin-top: 20px;
             position: relative;
             padding-top: 56.25%; /* 16:9 aspect ratio */
-            background-color: #fff; /* White background for video container */
+            background-image: url('d1m1.png'); /* White background for video container */
             border: 4px solid #ff6f00; /* Deep orange border */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
