--- a/index.html
+++ b/index.html
@@ -77,15 +77,18 @@
             width: 100%;
         }
         .video-container {
-            margin-top: 20px;
-            position: relative;
-            padding-top: 56.25%; /* 16:9 aspect ratio */
-            background-image: url('d1m1.png'); /* White background for video container */
-            border: 4px solid #ff6f00; /* Deep orange border */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
-            overflow: hidden; /* Hide overflow */
-        }
+    margin-top: 20px;
+    position: relative;
+    padding-top: 56.25%; /* 16:9 aspect ratio */
+    background-image: url('d1m1.png'); /* Replace with the actual path to your background image */
+    background-size: cover; /* Ensure the image covers the entire container */
+    background-position: center; /* Center the background image */
+    border: 4px solid #ff6f00; /* Deep orange border */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
+    overflow: hidden; /* Hide overflow */
+}
+
         .video-container iframe {
             position: absolute;
             top: 0;
