--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     margin-top: 20px;
     position: relative;
     padding-top: 56.25%; /* 16:9 aspect ratio */
-    background-image: url('d1m1.png'); /* Replace with the actual path to your background image */
+    background-image: url('d1m1.jpg'); /* Replace with the actual path to your background image */
     background-size: cover; /* Ensure the image covers the entire container */
     background-position: center; /* Center the background image */
     border: 4px solid #ff6f00; /* Deep orange border */
