--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
         .pdf-button:hover {
             background: linear-gradient(to right, #fdd835, #fbc02d); /* Darker gradient on hover */
         }
+        .live-match-container {
+            overflow: hidden;
+            white-space: nowrap;
+            background: linear-gradient(to right, #e65100, #ff6f00); /* Deep orange to lighter orange */
+            color: white;
+            padding: 10px 0;
+            margin-top: 10px;
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+        }
+        .live-match-text {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scroll-left 10s linear infinite;
+            font-size: 1.2em;
+        }
+        @keyframes scroll-left {
+            from {
+                transform: translateX(100%);
+            }
+            to {
+                transform: translateX(-100%);
+            }
+        }
         main {
             padding: 20px;
             position: relative;
@@ -77,18 +101,17 @@
             width: 100%;
         }
         .video-container {
-    margin-top: 20px;
-    position: relative;
-    padding-top: 56.25%; /* 16:9 aspect ratio */
-    background-image: url('d1m1.jpg'); /* Replace with the actual path to your background image */
-    background-size: cover; /* Ensure the image covers the entire container */
-    background-position: center; /* Center the background image */
-    border: 4px solid #ff6f00; /* Deep orange border */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
-    overflow: hidden; /* Hide overflow */
-}
-
+            margin-top: 20px;
+            position: relative;
+            padding-top: 56.25%; /* 16:9 aspect ratio */
+            background-image: url('d1m1.jpg'); /* Replace with the actual path to your background image */
+            background-size: cover; /* Ensure the image covers the entire container */
+            background-position: center; /* Center the background image */
+            border: 4px solid #ff6f00; /* Deep orange border */
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
+            overflow: hidden; /* Hide overflow */
+        }
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -162,6 +185,9 @@
         <img src="images/TPL LOGO.png" alt="TCL Logo" class="logo">
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
+        <div class="live-match-container">
+            <p class="live-match-text">Live Match: Team A vs Team B - Follow the action live!</p>
+        </div>
     </header>
     <main>
         <div id="leaderboard-container">
