--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
         <div class="live-match-container">
-            <p class="live-match-text">Live Match: Team A vs Team B - Follow the action live!</p>
+            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm ! -- participating teams today : Thalassery vs Gladiators , CSS Chameleons vs Boom Boom Backend , Thalassery vs Sharp Shooters , Defenders vs Java Jitters ! stay tuned for live updates.... </p>
         </div>
     </header>
     <main>
